[package]
name = "lada"
version = "0.2.0"
authors = ["David Phillips <david@daviddouglasphillips.com>"]

[dependencies]
rand = "0.5"
slack = "0.22.0"
bincode = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
regex = "0.2"
clap = "2"
twox-hash = "1.1.0"

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
